style and events

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -93,3 +93,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* explore using when focus on PWA */
+/* @supports (padding-top: constant(safe-area-inset-top)) {
+  html {
+    min-height: calc(100% + env(safe-area-inset-top));
+    padding: env(safe-area-inset-top) env(safe-area-inset-right)
+      env(safe-area-inset-bottom) env(safe-area-inset-left);
+  }
+} */
