--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,6 +63,11 @@
 
 @layer base {
   :root {
+    --color-primary: 126 34 206;
+    --fallback-p: rgb(var(--color-primary));
+    --fallback-pc: white;
+    --fallback-bc: white;
+
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
@@ -102,6 +107,8 @@
   }
 
   .dark {
+    --color-primary: 126 34 206;
+
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
 
