--- a/src/components/typography/animated-text.css
+++ b/src/components/typography/animated-text.css
@@ -1,8 +1,9 @@
 .text-word {
   color: inherit; /* Default text color */
-  transition: color 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .text-word.highlight {
   color: white; /* Highlight color */
+  opacity: 1;
 }
