--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,13 +63,18 @@
 
 @layer base {
   :root {
-    --color-primary: 126 34 206;
-    --fallback-p: rgb(var(--color-primary));
+    --color-primary: 278 71.6% 47.05%;
+    --color-success: 22 163 74;
+    --color-neutral: 100 116 139;
+    --fallback-n: rgb(var(--color-neutral));
+    --fallback-p: rgb(var(--color-success) / 1);
+    /* --fallback-p: rgb(var(--color-success)); */
     --fallback-pc: white;
     --fallback-bc: white;
 
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
+
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
