fix list title styling when title is long

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -221,3 +221,11 @@ html {
   opacity: 0;
   pointer-events: none;
 }
+
+.list-title{
+  word-break: break-all !important;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
